Framework Enhanced with Propertiy File